ansible/terraform/security-group.tf

# Criar um Security Group para permitir tráfego SSH e Puppet
resource "aws_security_group" "ansible_sg" {
  name        = "puppet-sg"
  description = "Allow SSH and Puppet"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
